--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,7 +1,7 @@
 ---
 import Button from "./ui/Button.astro";
 
-const navItems = ["Features", "Benefits", "About", "Pricing", "Contact"];
+const navItems = ["Features", "Pricing", "Resource Hub"];
 const SIGN_IN_URL = "https://app.ionkol.com/sign-in";
 const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
 ---
@@ -29,7 +29,7 @@ const SIGN_UP_URL = "https://app.ionkol.com/sign-up";
   </div>
 
   <!-- Navigation links for desktop -->
-  <nav class="hidden lg:flex space-x-4">
+  <nav class="hidden lg:flex space-x-4 lg:ml-56">
     <ul
       class="flex gap-[2rem] list-none text-[#0d0c22] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
       {
