--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const benefits = [
   },
   {
     imageUrl: '/coins-hand.svg',
-    title: 'Competative pricing',
+    title: 'Competitive pricing',
     description:
       'Access powerful influencer marketing tools at an affordable price with no hidden fees.',
   },
@@ -51,7 +51,7 @@ const benefits = [
     imageUrl: '/globe.svg',
     title: 'Global Reach',
     description:
-      'Expand your business internationally with localisation strategies to connect with foreign audiences.',
+      'Expand your business internationally with localization strategies to connect with foreign audiences.',
   },
 ];
 
@@ -61,12 +61,14 @@ const solutionsCards = [
     description:
       'Evaluate the success of your influencer partnerships with actionable insights into performance metrics and audience engagement.',
     miniCard: htmlStringOne,
+    link: "https://app.ionkol.com/sign-up/",
   },
   {
     title: 'ION Explore',
     description:
       'Discover and connect with creators who amplify your brand’s message. Save time with advanced filters to find influencers who align with your goals and deliver real results.',
     miniCard: htmlStringTwo,
+    link: "/explore/",
   },
 ];
 
