--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,10 @@ const { title } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="All-in-one social media analytics tool for businesses. Explore. Analyze. Discover new opportunities."/>
+    <meta
+      name="description"
+      content="All-in-one social media analytics tool for businesses. Explore. Analyze. Discover new opportunities."
+    />
     <meta name="viewport" content="width=device-width" />
 
     <!-- Open graph -->
@@ -45,5 +48,45 @@ const { title } = Astro.props;
   </head>
   <body class="overflow-x-hidden">
     <slot />
+    
+    <!-- Scroll to top button -->
+    <button
+      id="scroll-to-top"
+      class="w-16 h-16 flex items-center justify-center rounded-full fixed bottom-12 right-10 bg-[#EE7380] opacity-0 invisible scale-75 transition-all duration-300">
+      <svg
+        width="18"
+        height="10"
+        viewBox="0 0 18 10"
+        fill="none"
+        xmlns="http://www.w3.org/2000/svg">
+        <path
+          d="M17 9L9 1L1 9"
+          stroke="white"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"></path>
+      </svg>
+    </button>
+    <script>
+      const scrollToTopButton = document.getElementById('scroll-to-top');
+      const scrollThreshold = 400;
+
+      window.addEventListener('scroll', () => {
+        if (window.scrollY > scrollThreshold) {
+          scrollToTopButton!.classList.remove('opacity-0', 'invisible', 'scale-75');
+          scrollToTopButton!.classList.add('opacity-100', 'scale-100');
+        } else {
+          scrollToTopButton!.classList.remove('opacity-100', 'scale-100');
+          scrollToTopButton!.classList.add('opacity-0', 'invisible', 'scale-75');
+        }
+      });
+
+      scrollToTopButton!.addEventListener('click', () => {
+        window.scrollTo({
+          top: 0,
+          behavior: 'smooth',
+        });
+      });
+    </script>
   </body>
 </html>
