--- a/src/pages/explore.astro
+++ b/src/pages/explore.astro
@@ -5,12 +5,18 @@ import Footer from '../components/Footer.astro';
 import { Image } from 'astro:assets';
 import Button from '../components/ui/Button.astro';
 import ExploreInfoCard from '../components/react/ExploreInfoCard.tsx';
-import { filterTabImage, searchTabImage, saveTabImage } from '../constants/htmlStrings';
+import {
+  filterTabImage,
+  searchTabImage,
+  saveTabImage,
+  engagementTabImage,
+  parametersTabImage,
+} from '../constants/htmlStrings';
 
 const exploreTabsData = [
   {
     title: 'Filter',
-    visualContent: filterTabImage, 
+    visualContent: filterTabImage,
     text: 'Refine your search by applying advanced filters tailored to your needs.',
   },
   {
@@ -28,12 +34,12 @@ const exploreTabsData = [
 const analyzeTabsData = [
   {
     title: 'Parameters',
-    visualContent: filterTabImage,
+    visualContent: parametersTabImage,
     text: 'Discover the essence of your audience with advanced analytics: explore follower demographics from location to age and more, to craft bespoke campaigns.',
   },
   {
     title: 'Engagement',
-    visualContent: filterTabImage,
+    visualContent: engagementTabImage,
     text: 'Elevate your influencer evaluation with engagement insights: measure interaction rates, and ensure every creator delivers genuine, impactful engagement.',
   },
 ];
@@ -96,21 +102,107 @@ const analyzeTabsData = [
     </p>
   </div>
 
-  <!-- Main section title -->
+  <!-- Main section -->
   <div class="flex flex-col lg:flex-row w-[93%] mx-auto mt-10 gap-6">
-    <div class="w-1/2">
+    <div class="lg:w-1/2">
       <p class="text-[32px] text-[#0D0C22] font-['Urbanist'] font-medium">ION Explore</p>
-      <ExploreInfoCard
-        client:load
-        tabs={exploreTabsData}
-      />
+      <ExploreInfoCard client:load tabs={exploreTabsData} />
     </div>
-    <div class="w-1/2">
+    <div class="lg:w-1/2">
       <p class="text-[32px] text-[#0D0C22] font-['Urbanist'] font-medium">ION Analyze</p>
-      <ExploreInfoCard
-        client:load
-        tabs={analyzeTabsData}
-      />
+      <ExploreInfoCard client:load tabs={analyzeTabsData} />
+    </div>
+  </div>
+
+  <!-- Contact us section -->
+  <div class="flex flex-col lg:flex-row mt-20 gap-6 mb-40">
+    <div class="w-1/2 relative h-96">
+      <div
+        class="rotate-[2.94deg] scale-50 md:scale-75 lg:scale-100 absolute top-16 right-28 -translate-y-1/4 h-fit w-fit p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 flex"
+        style={{
+          'box-shadow': '0px 4px 16px 0px rgba(203, 186, 176, 0.25)',
+        }}>
+        <Image src="/Bars.svg" alt="bars" width={198} height={128} />
+        <p class="font-inter text-[14px] font-normal leading-[26px] tracking-[0.002em] text-left">
+          Statistics
+        </p>
+      </div>
+      <div
+        class="scale-50 md:scale-75 lg:scale-100 absolute top-[-2rem] left-[6rem] translate-x-1/2 translate-y-1/2 -rotate-[7.88deg] h-[110px] w-[110px] p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 md:flex"
+        style={{
+          'box-shadow': '0px 4px 16px 0px rgba(203, 186, 176, 0.25)',
+        }}>
+        <p
+          class="font-inter text-[16px] text-[#F87217] font-normal leading-[24px] tracking-[0.002em] text-center">
+          8.22k
+        </p>
+        <p
+          class="font-open-sans text-[12px] font-normal leading-[16px] tracking-[0.002em] text-center">
+          Eng.
+        </p>Followers
+      </div>
+      <div
+        class="scale-50 md:scale-75 lg:scale-100 absolute bottom-[7rem] left-[9rem] translate-y-1/3 translate-x-1/4 rotate-[4.33deg] h-[138px] w-[211px] p-6 bg-white rounded-xl flex-col justify-center items-start gap-2 flex"
+        style={{
+          'box-shadow': '0px 4px 16px 0px rgba(203, 186, 176, 0.25)',
+        }}>
+        <div class="flex items-center gap-2">
+          <Image src="/girl-placeholder-2.png" alt="girl" width={32} height={32} />
+          <div
+            class="font-inter text-[14px] font-medium leading-[26px] tracking-[0.002em] text-left">
+            Mikki Adams
+          </div>
+        </div>
+        <div class="flex items-center gap-2 mb-2">
+          <Image src="/girl-placeholder-3.png" alt="girl" width={32} height={32} />
+          <div
+            class="font-inter text-[14px] font-medium leading-[26px] tracking-[0.002em] text-left">
+            Jakie Town
+          </div>
+        </div>
+        <div
+          class="font-inter mx-auto text-[14px] font-normal leading-[26px] tracking-[0.002em] text-center">
+          Influencers
+        </div>
+      </div>
+      <div
+        class="scale-50 md:scale-75 lg:scale-100 absolute bottom-[-2rem] right-0 translate-y-1/4 -translate-x-1/4 rotate-[-7.81deg] h-fit w-fit p-6 bg-white rounded-xl justify-center items-center gap-2 md:flex"
+        style={{
+          'box-shadow': '0px 4px 16px 0px rgba(203, 186, 176, 0.25)',
+        }}>
+        <Image src="/3-girls.png" alt="girls" width={80} height={34} />
+        <div>
+          <span>Liked by</span>
+          <span class="font-medium">ann_sunny</span>
+          <span>and</span>
+          <span class="font-medium">7 888 others</span>
+        </div>
+      </div>
+    </div>
+    <div class="flex justify-center items-center w-1/2">
+      <div class="max-w-[654px]">
+        <h1
+          class="text-left text-[#ed707e] text-5xl font-extrabold font-['Urbanist'] tracking-wide mb-4">
+          Contact us
+        </h1>
+        <p
+          class="text-left text-[#0d0c22] text-base font-medium font-['Mulish'] leading-7 tracking-tight mb-9">
+          We're here to help! IonKol is launching soon with powerful tools to enhance your
+          influencer marketing strategy. Contact us today to explore how IonKol can support to
+          achieve your goals.
+        </p>
+        <form class="flex gap-3" action="/subscribe" method="POST">
+          <input
+            type="email"
+            name="email"
+            placeholder="Email address"
+            aria-label="Email address"
+            required
+            class="flex-1 h-10 px-4 py-2 bg-white rounded-lg border border-[#ffdede] text-base font-medium font-['Urbanist'] leading-normal tracking-wide"
+          />
+          <Button text="Learn more" />
+        </form>
+      </div>
     </div>
   </div>
 </Layout>
