fix: fix ion explore / analyze swap animation

--- a/src/components/slider/MainContent.astro
+++ b/src/components/slider/MainContent.astro
@@ -71,8 +71,8 @@ const titles = ["Explore", "Analyse"]
   <p class="text-[#0d0c22] text-lg absolute top-0 font-medium font-['Mulish'] tracking-tight lg:text-2xl">
     AI influencer analytics platform
   </p>
-    <div class={`${data.textColor} text-5xl flex mb-8 gap-10 w-screen flex-row items-center justify-center font-extrabold font-['Urbanist'] tracking-[2.6px] lg:text-[130px]`}>
-      ION <div class="animated-box"><span class="animated-slides">{titles[0]}</span></div>
+    <div class={`${data.textColor} text-5xl flex mb-8 lg:gap-10  w-screen lg:ml-0 ml-6 sm:ml-10 flex-row items-center justify-center font-extrabold font-['Urbanist'] tracking-[2.6px] lg:text-[130px]`}>
+      ION <div class="animated-box lg:w-[500px] md:w-[250px] sm:w-[220px] w-[210px]"><span class="animated-slides">{titles[0]}</span></div>
     </div>
   <p class="text-[#9e9ea7] text-base font-normal font-['Mulish'] tracking-wide mb-14 lg:text-lg">
     {data.description}
