--- a/src/pages/explore.astro
+++ b/src/pages/explore.astro
@@ -12,6 +12,7 @@ import {
   engagementTabImage,
   parametersTabImage,
 } from '../constants/htmlStrings';
+import './_index.css';
 
 const exploreTabsData = [
   {
@@ -89,10 +90,10 @@ const analyzeTabsData = [
 
   <!-- Main section title -->
   <div class="w-[85%] mt-60 mx-auto flex flex-col gap-2 items-center justify-center animate-appear">
-    <p class="text-[#0D0C22] text-[32px] font-['Urbanist'] text-center animate-appear">
+    <p class="text-[#0D0C22] text-[32px] font-['Urbanist'] text-center">
       Explore new and emerging creators to partner with your brand in 3 easy steps
     </p>
-    <p class="text-[#71717A] text-lg text-center font-['Mulish'] animate-appear">
+    <p class="text-[#71717A] text-lg text-center font-['Mulish']">
       Transform your marketing with effortless access to over <span class="font-semibold text-black"
         >(x)</span
       > creators across <span class="font-semibold text-black">(x)</span> countries. Discover, connect,
@@ -103,7 +104,7 @@ const analyzeTabsData = [
   </div>
 
   <!-- Main section -->
-  <div class="flex flex-col lg:flex-row w-[93%] mx-auto mt-10 gap-6">
+  <div class="flex flex-col lg:flex-row w-[93%] mx-auto mt-10 gap-6 animate-appear">
     <div class="lg:w-1/2">
       <p class="text-[32px] text-[#0D0C22] font-['Urbanist'] font-medium">ION Explore</p>
       <ExploreInfoCard client:load tabs={exploreTabsData} />
@@ -115,8 +116,8 @@ const analyzeTabsData = [
   </div>
 
   <!-- Contact us section -->
-  <div class="flex flex-col lg:flex-row mt-20 gap-6 mb-40">
-    <div class="w-1/2 relative h-96">
+  <div class="flex flex-col lg:flex-row mt-20 gap-6 mb-40 animate-appear">
+    <div class="w-1/2 relative h-96 hidden lg:block">
       <div
         class="rotate-[2.94deg] scale-50 md:scale-75 lg:scale-100 absolute top-16 right-28 -translate-y-1/4 h-fit w-fit p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 flex"
         style={{
@@ -128,7 +129,7 @@ const analyzeTabsData = [
         </p>
       </div>
       <div
-        class="scale-50 md:scale-75 lg:scale-100 absolute top-[-2rem] left-[6rem] translate-x-1/2 translate-y-1/2 -rotate-[7.88deg] h-[110px] w-[110px] p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 md:flex"
+        class="hidden scale-50 md:scale-75 lg:scale-100 absolute top-[-2rem] left-[6rem] translate-x-1/2 translate-y-1/2 -rotate-[7.88deg] h-[110px] w-[110px] p-6 bg-white rounded-xl flex-col justify-center items-center gap-2 custom-lg:flex"
         style={{
           'box-shadow': '0px 4px 16px 0px rgba(203, 186, 176, 0.25)',
         }}>
@@ -142,7 +143,7 @@ const analyzeTabsData = [
         </p>Followers
       </div>
       <div
-        class="scale-50 md:scale-75 lg:scale-100 absolute bottom-[7rem] left-[9rem] translate-y-1/3 translate-x-1/4 rotate-[4.33deg] h-[138px] w-[211px] p-6 bg-white rounded-xl flex-col justify-center items-start gap-2 flex"
+        class="hidden custom-lg:block scale-50 md:scale-75 lg:scale-100 absolute bottom-[7rem] left-[9rem] translate-y-1/3 translate-x-1/4 rotate-[4.33deg] h-[138px] w-[211px] p-6 bg-white rounded-xl flex-col justify-center items-start gap-2 flex"
         style={{
           'box-shadow': '0px 4px 16px 0px rgba(203, 186, 176, 0.25)',
         }}>
@@ -179,14 +180,14 @@ const analyzeTabsData = [
         </div>
       </div>
     </div>
-    <div class="flex justify-center items-center w-1/2">
+    <div class="flex justify-center items-center lg:w-1/2 p-6">
       <div class="max-w-[654px]">
         <h1
-          class="text-left text-[#ed707e] text-5xl font-extrabold font-['Urbanist'] tracking-wide mb-4">
+          class="text-center lg:text-left text-[#ed707e] text-5xl font-extrabold font-['Urbanist'] tracking-wide mb-4">
           Contact us
         </h1>
         <p
-          class="text-left text-[#0d0c22] text-base font-medium font-['Mulish'] leading-7 tracking-tight mb-9">
+          class="text-center lg:text-left text-[#0d0c22] text-base font-medium font-['Mulish'] leading-7 tracking-tight mb-9">
           We're here to help! IonKol is launching soon with powerful tools to enhance your
           influencer marketing strategy. Contact us today to explore how IonKol can support to
           achieve your goals.
