style: update index page

--- a/src/components/Benefit.astro
+++ b/src/components/Benefit.astro
@@ -24,12 +24,12 @@ const { title, description, imageUrl } = Astro.props;
   </div>
 
   <h3
-    class="text-center text-[#0d0c22] text-3xl font-medium font-['Urbanist'] leading-10 tracking-wide">
+    class="text-center text-[#0d0c22] text-3xl font-medium  leading-10 tracking-wide">
     {title}
   </h3>
 
   <p
-    class="text-center text-[#0d0c22] text-lg font-normal font-['Mulish'] leading-7 tracking-tight">
+    class="text-center text-[#0d0c22] text-lg font-normal  leading-7 tracking-tight">
     {description}
   </p>
 </div>
