--- a/src/components/FeaturedSolutionsCard.astro
+++ b/src/components/FeaturedSolutionsCard.astro
@@ -13,11 +13,11 @@ const { title, description, link } = Astro.props;
 
 <div class="lg:w-1/2 bg-[#fff7f8] rounded-[40px] p-6 md:p-12 lg:p-24 xl:p-32 relative">
   <h6
-    class="text-[#0d0c22] text-2xl md:text-3xl lg:text-[40px] font-semibold font-['Urbanist'] tracking-wide mb-[18px]">
+    class="text-[#0d0c22] text-2xl md:text-3xl lg:text-[40px] font-semibold  tracking-wide mb-[18px]">
     {title}
   </h6>
   <p
-    class="mb-10 text-[#0d0c22] lg:min-h-20 lg:max-h-20 text-base font-normal font-['Mulish'] leading-7 tracking-tight lg:mb-9 lg:text-base md:text-lg">
+    class="mb-10 text-[#0d0c22] lg:min-h-20 lg:max-h-20 text-base font-normal  leading-7 tracking-tight lg:mb-9 lg:text-base md:text-lg">
     {description}
   </p>
   <a href={link}> <Button text="Learn more" className="" type="fill" /></a>
