--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
   
   <div class="flex flex-col mb-8 sm:mb-10 sm:text-center">
     <h2
-      class="text-[#0d0c22] text-2xl sm:text-3xl font-bold font-['Urbanist'] tracking-tight mb-4 text-left">
+      class="text-[#0d0c22] text-2xl sm:text-3xl font-bold  tracking-tight mb-4 text-left">
       iON
     </h2>
     <p
@@ -16,21 +16,21 @@
   <nav aria-label="Footer Navigation" class="flex flex-wrap gap-8 sm:gap-12 justify-center">
     <div>
       <h3
-        class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4 text-center sm:text-left">
+        class="text-[#0d0c22] text-lg font-medium  leading-normal tracking-tight mb-4 text-center sm:text-left">
         Services
       </h3>
       <ul class="flex flex-col gap-3 text-center sm:text-left">
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             Ion Explore
           </a>
         </li>
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             Ion Analyze
           </a>
         </li>
@@ -39,21 +39,21 @@
 
     <div>
       <h3
-        class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4 text-center sm:text-left">
+        class="text-[#0d0c22] text-lg font-medium  leading-normal tracking-tight mb-4 text-center sm:text-left">
         Get Started
       </h3>
       <ul class="flex flex-col gap-3 text-center sm:text-left">
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             Book a demo
           </a>
         </li>
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             Contact us
           </a>
         </li>
@@ -62,49 +62,49 @@
 
     <div>
       <h3
-        class="text-[#0d0c22] text-lg font-medium font-['Urbanist'] leading-normal tracking-tight mb-4 text-center sm:text-left">
+        class="text-[#0d0c22] text-lg font-medium  leading-normal tracking-tight mb-4 text-center sm:text-left">
         Who We Are
       </h3>
       <ul class="flex flex-col gap-3 text-center sm:text-left">
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             About us
           </a>
         </li>
         <li>
           <a
-            href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            href="/blog"
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             Blog
           </a>
         </li>
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             Case study
           </a>
         </li>
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             FAQs
           </a>
         </li>
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             Privacy Policy
           </a>
         </li>
         <li>
           <a
             href="#"
-            class="text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight">
+            class="text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight">
             Terms of Service
           </a>
         </li>
