--- a/src/components/PriceCard.astro
+++ b/src/components/PriceCard.astro
@@ -29,36 +29,36 @@ const {
   style={{ backgroundColor: cardBgColor }}>
   <div class="flex flex-col justify-center items-center">
     <h3
-      class="text-center text-[#0d0c22] text-3xl font-semibold font-['Urbanist'] leading-[42px] tracking-wide mb-6">
+      class="text-center text-[#0d0c22] text-3xl font-semibold  leading-[42px] tracking-wide mb-6">
       {name}
     </h3>
 
     <div class="flex justify-center items-center mb-2">
       <span
-        class="text-center text-[#0d0c22] text-3xl font-semibold font-['Urbanist'] leading-[42px] tracking-wide">
+        class="text-center text-[#0d0c22] text-3xl font-semibold  leading-[42px] tracking-wide">
         $
       </span>
       <span
-        class="monthlyPrice text-center text-[#0d0c22] text-6xl font-semibold font-['Urbanist'] tracking-wide">
+        class="monthlyPrice text-center text-[#0d0c22] text-6xl font-semibold  tracking-wide">
         {price_monthly}
       </span>
       <span
-        class="yearlyPrice hidden text-center text-[#0d0c22] text-6xl font-semibold font-['Urbanist'] tracking-wide">
+        class="yearlyPrice hidden text-center text-[#0d0c22] text-6xl font-semibold  tracking-wide">
         {price_yearly}
       </span>
     </div>
 
     <div
-      class="monthlyPriceLabel text-center text-[#0d0c22] text-base font-semibold font-['Urbanist'] uppercase leading-normal tracking-tight mb-3">
+      class="monthlyPriceLabel text-center text-[#0d0c22] text-base font-semibold  uppercase leading-normal tracking-tight mb-3">
       PER MONTH
     </div>
     <div
-      class="yearlyPriceLabel hidden text-center text-[#0d0c22] text-base font-semibold font-['Urbanist'] uppercase leading-normal tracking-tight mb-3">
+      class="yearlyPriceLabel hidden text-center text-[#0d0c22] text-base font-semibold  uppercase leading-normal tracking-tight mb-3">
       PER YEAR
     </div>
 
     <p
-      class="text-center text-[#9e9ea7] text-base font-normal font-['Mulish'] leading-normal tracking-tight mb-7">
+      class="text-center text-[#9e9ea7] text-base font-normal  leading-normal tracking-tight mb-7">
       {subheader}
     </p>
 
@@ -69,7 +69,7 @@ const {
 
   <div class="w-full flex flex-col gap-4">
     <p
-      class="self-stretch text-[#0d0c22] text-sm font-semibold font-['Urbanist'] uppercase tracking-tight">
+      class="self-stretch text-[#0d0c22] text-sm font-semibold  uppercase tracking-tight">
       Enjoy:
     </p>
 
@@ -83,7 +83,7 @@ const {
             height="24"
             class="flex-shrink-0"
           />
-          <p class="text-[#0d0c22] text-base font-normal font-['Mulish'] tracking-tight">
+          <p class="text-[#0d0c22] text-base font-normal  tracking-tight">
             {text}
           </p>
         </div>
