--- a/src/components/slider/Swiper.astro
+++ b/src/components/slider/Swiper.astro
@@ -7,7 +7,7 @@ const slides = [
     title: 'ION Explore',
     textColor: 'text-[#ed707e]',
     description: 'Data-driven success',
-    buttonLabel: 'Book a Demo',
+    buttonLabel: 'Start Now',
     circleBackgroundColor: 'bg-[#feeff1]',
     circleTopPosition: '-top-[18%] lg:-top-[20%] left-[65%]',
     circleContent: `
