--- a/src/pages/explore.astro
+++ b/src/pages/explore.astro
@@ -77,8 +77,8 @@ const analyzeTabsData = [
     </div>
     <div class="flex flex-col justify-between gap-2 w-1/2">
       <p class="text-[27px] text-[#0D0C22] font-medium">IONKOL</p>
-      <p class="text-[54px] text-[#ed707e] font-['Urbanist'] font-extrabold">Explore</p>
-      <p class="text-lg font-['Mulish'] mb-4 text-left lg:w-[75%]">
+      <p class="text-[54px] text-[#ed707e]  font-extrabold">Explore</p>
+      <p class="text-lg  mb-4 text-left lg:w-[75%]">
         Track your own data to see where you are doing well and where you have more potential for
         growth. Access all our metrics to see where you stand and understand how you can grow.
       </p>
@@ -90,10 +90,10 @@ const analyzeTabsData = [
 
   <!-- Main section title -->
   <div class="w-[85%] mt-60 mx-auto flex flex-col gap-2 items-center justify-center animate-appear">
-    <p class="text-[#0D0C22] text-[32px] font-['Urbanist'] text-center">
+    <p class="text-[#0D0C22] text-[32px]  text-center">
       Explore new and emerging creators to partner with your brand in 3 easy steps
     </p>
-    <p class="text-[#71717A] text-lg text-center font-['Mulish']">
+    <p class="text-[#71717A] text-lg text-center ">
       Transform your marketing with effortless access to over <span class="font-semibold text-black"
         >(x)</span
       > creators across <span class="font-semibold text-black">(x)</span> countries. Discover, connect,
@@ -106,11 +106,11 @@ const analyzeTabsData = [
   <!-- Main section -->
   <div class="flex flex-col lg:flex-row w-[93%] mx-auto mt-10 gap-6 animate-appear">
     <div class="lg:w-1/2">
-      <p class="text-[32px] text-[#0D0C22] font-['Urbanist'] font-medium">ION Explore</p>
+      <p class="text-[32px] text-[#0D0C22]  font-medium">ION Explore</p>
       <ExploreInfoCard client:load tabs={exploreTabsData} />
     </div>
     <div class="lg:w-1/2">
-      <p class="text-[32px] text-[#0D0C22] font-['Urbanist'] font-medium">ION Analyze</p>
+      <p class="text-[32px] text-[#0D0C22]  font-medium">ION Analyze</p>
       <ExploreInfoCard client:load tabs={analyzeTabsData} />
     </div>
   </div>
@@ -183,11 +183,11 @@ const analyzeTabsData = [
     <div class="flex justify-center items-center lg:w-1/2 p-6">
       <div class="max-w-[654px]">
         <h1
-          class="text-center lg:text-left text-[#ed707e] text-5xl font-extrabold font-['Urbanist'] tracking-wide mb-4">
+          class="text-center lg:text-left text-[#ed707e] text-5xl font-extrabold  tracking-wide mb-4">
           Contact us
         </h1>
         <p
-          class="text-center lg:text-left text-[#0d0c22] text-base font-medium font-['Mulish'] leading-7 tracking-tight mb-9">
+          class="text-center lg:text-left text-[#0d0c22] text-base font-medium  leading-7 tracking-tight mb-9">
           We're here to help! IonKol is launching soon with powerful tools to enhance your
           influencer marketing strategy. Contact us today to explore how IonKol can support to
           achieve your goals.
@@ -199,7 +199,7 @@ const analyzeTabsData = [
             placeholder="Email address"
             aria-label="Email address"
             required
-            class="flex-1 h-10 px-4 py-2 bg-white rounded-lg border border-[#ffdede] text-base font-medium font-['Urbanist'] leading-normal tracking-wide"
+            class="flex-1 h-10 px-4 py-2 bg-white rounded-lg border border-[#ffdede] text-base font-medium  leading-normal tracking-wide"
           />
           <Button text="Learn more" />
         </form>
