--- a/src/pages/_index.css
+++ b/src/pages/_index.css
@@ -1,12 +1,14 @@
 .animate-appear {
   opacity: 0;
   transform: translateY(10px);
-  transition:
-    opacity 0.5s ease-in-out,
-    transform 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
 .animate-appear.visible {
   opacity: 1;
   transform: translateY(0);
+}
+
+body {
+  font-family: "Gill Sans";
 }
